chapter5/5.4.2-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway	#这里是有Istio默认的网关
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
