chapter5/5.4.2-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /headers
    - uri:
        prefix: /delay
    - uri:
        prefix: /html
    - uri:
        prefix: /status
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
